@@ -1,6 +1,7 @@
 Revision history for Test-Warnings
 
 {{$NEXT}}
+          - allow tests to pass even when Import::Into is not installed
 
 0.034     2025-01-03 02:46:29Z
           - fix Test2 compability for done_testing()
